--- a/app/room/room.html
+++ b/app/room/room.html
@@ -2,21 +2,25 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <div ng-repeat="u in room.users">
-                    <h3>{{u.name}}<div class="glyphicon glyphicon-ok" ng-show="u.vote"/></h3>
-                    <h3 ng-show="revealVote">{{u.vote}}</h3>
+                <div ng-repeat="(k,u) in room.users">
+                    <div class="glyphicon glyphicon-tower" ng-show="room.owner == k"></div>
+                    <div class="glyphicon glyphicon-user" ng-hide="room.owner == k"></div>
+                    {{u.name}}
+                    <div class="glyphicon glyphicon-ok" ng-show="u.vote"></div>
+                    <div ng-show="room.revealVote">{{u.vote}}</div>
                 </div>
+                <button type="button" class="btn btn-warning center" ng-click="exitRoom()">Exit</button>
             </div>
             <div class="col-sm-8">
                 <h1>{{room.name}}</h1>
-                <button type="button" class="btn btn-primary" ng-disabled="voted" ng-repeat="card in cards" ng-click="selectCard(card)">{{card}}</button>
+                <button type="button" class="btn btn-primary" ng-disabled="user.vote && card != user.vote" ng-repeat="card in cards" ng-click="selectCard(card)">{{card}}</button>
                 <h1>{{data.text}}</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 text-center">
-                <button type="button" class="btn btn-warning" ng-click="revealVotes(card)">Reveal Votes</button>
-                <button type="button" class="btn btn-warning" ng-click="restartRound(card)">Restart Round</button>
+            <div class="col-sm-8 col-sm-offset-4">
+                <button type="button" class="btn btn-warning" ng-click="revealVotes(card)" ng-show="user.$id == room.owner">Reveal Votes</button>
+                <button type="button" class="btn btn-warning" ng-click="restartRound(card)" ng-show="user.$id == room.owner">Restart Round</button>
             </div>
         </div>
     </div>
