--- a/app/index.html
+++ b/app/index.html
@@ -17,20 +17,17 @@
       <h2>Poker Plan App!</h2>
     </div>
     <div ng-view></div>
-    <script src="bower_components/angular/angular.js"></script>
+   <!--  <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
-    <script src="app.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script> -->
+    <script src="build/js/bundle.js"></script>
     <script src="scripts/controllers/HomeCtrl.js"></script>
     <script src="scripts/controllers/RoomCtrl.js"></script>
     <script src="scripts/services/FirebaseService.js"></script>
     <script src="scripts/services/RoomService.js"></script>
     <script src="scripts/services/RouteService.js"></script>
     <script src="scripts/services/UserService.js"></script>
-    <script src="components/version/version.js"></script>
-    <script src="components/version/version-directive.js"></script>
-    <script src="components/version/interpolate-filter.js"></script>
   </body>
 </html>
