Implemented an Directive "Deck"
This patch makes available <deck /> directive for better visualization
of the cards when playing.

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <script src="build/js/bundle.js"></script>
     <script src="scripts/controllers/HomeCtrl.js"></script>
     <script src="scripts/controllers/RoomCtrl.js"></script>
+    <script src="scripts/directives/DeckDirective.js"></script>
     <script src="scripts/services/FirebaseService.js"></script>
     <script src="scripts/services/RoomService.js"></script>
     <script src="scripts/services/RouteService.js"></script>
