--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,15 @@
     <title>My AngularJS App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
-    <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   </head>
-  <body>
-    <div class="jumbotron" style="padding-bottom:0px;">
+  <body ng-controller="AppCtrl as app">
+    <div  ng-show="app.isLoading" class="loading-shade">
+      <div class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></div>
+      
+    </div>
+    <div style="padding-bottom:0px;" ng-hide="app.isLoading" ng-cloak>
       <h2>Poker Plan App!</h2>
     </div>
     <div ng-view></div>
@@ -25,6 +26,7 @@
     <script src="build/js/bundle.js"></script>
     <script src="scripts/controllers/HomeCtrl.js"></script>
     <script src="scripts/controllers/RoomCtrl.js"></script>
+    <script src="scripts/controllers/AppCtrl.js"></script>
     <script src="scripts/directives/DeckDirective.js"></script>
     <script src="scripts/services/FirebaseService.js"></script>
     <script src="scripts/services/RoomService.js"></script>
