--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <body ng-controller="AppCtrl as app">
     <div  ng-show="app.isLoading" class="loading-shade">
       <div class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></div>
-      
+
     </div>
     <div style="padding-bottom:0px;" ng-hide="app.isLoading" ng-cloak>
       <h2>Poker Plan App!</h2>
@@ -26,6 +26,7 @@
     <script src="build/js/bundle.js"></script>
     <script src="scripts/controllers/HomeCtrl.js"></script>
     <script src="scripts/controllers/RoomCtrl.js"></script>
+    <script src="scripts/controllers/ModalCtrl.js"></script>
     <script src="scripts/controllers/AppCtrl.js"></script>
     <script src="scripts/directives/DeckDirective.js"></script>
     <script src="scripts/services/FirebaseService.js"></script>
